src/components/Modal/Modal.css
.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--background-modal, #cacaca);
  position: absolute;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
}
.profile {
  display: grid;
  grid-template-columns: minmax(120px, 1fr) minmax(120px, 2fr);
  column-gap: 20px;
}
.edit-profile {
  display: inline-block;
  padding: 0 5px;
  transform: translateY(-5px) rotateY(180deg);
  cursor: pointer;
}
.input-profile {
  border: 0;
  background-color: var(--background-modal, #cacaca);
  padding: 0;
  min-width: 150px;
}

.upload-button {
  display: inline-block;
  padding: 10px 20px;
  background-color: #007bff;
  color: white;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  font-family: Arial, sans-serif;
  text-align: center;
  transition: background-color 0.3s ease;
}

.upload-button:hover {
  background-color: #0056b3;
}

.upload-button:active {
  background-color: #004080;
}

.upload-button input[type='file'] {
  display: none;
}

@media screen and (max-width: 576px) {
  .profile {
    grid-template-columns: minmax(200px, 1fr);
  }
}

